--- a/calculator/miniprogram/pages/index/index.wxml
+++ b/calculator/miniprogram/pages/index/index.wxml
@@ -8,7 +8,7 @@
       </view>
       <view class="section">
         <view class="panel-item">
-          <text class="panel__title">扣除前纳税额度</text>
+          <text class="panel__title">纳税额度</text>
           <view>{{oldRatalVal}}</view>
         </view>
         <view class="panel-item">
@@ -18,54 +18,59 @@
       </view>
     </view>
   </view>
-  <view class="section">{{oldWage}} - {{newWage}}</view>
+  <!-- <view class="section">{{socialFundVal}} - {{oldWage}} - {{newWage}}</view> -->
   <view class="section wage">
     <text class="section__title">您的月收入：</text>
     <view class="list-item">
-      <input bindblur="getWage" type="digit" placeholder="请输入您的工资" placeholder-class="placeholder" />
+      <input bindinput="getWage" type="digit" placeholder="请输入您的工资" placeholder-class="placeholder" />
     </view>
   </view>
 
   <view class="section list">
     <text class="section__title">常规扣除：</text>
     <view class="list-item">
-      <text class="list__title">五险一金：</text>
-      <input bindblur="deduction" type="digit" placeholder="请输入五险一金扣除额" placeholder-class="placeholder" value="" />
+      <text class="list__title">新起征额：</text>
+      <input class='input-disabled' bindblur="deduction" type="digit" value="5000" disabled />
     </view>
     <view class="list-item">
-      <text class="list__title">税收起征额：</text>
-      <input class='input-disabled' bindblur="deduction" type="digit" value="5000" disabled />
+      <text class="list__title">五险一金：</text>
+      <input bindblur="deduction" type="digit" placeholder="请输入五险一金扣除额" placeholder-class="placeholder"
+       value="{{socialFundVal}}"
+       data-val="socialFundVal"
+        />
     </view>
   </view>
 
   <view class="section list">
     <text class="section__title">新增专项扣除：</text>
     <view class="list-item">
-      <text class="list__title">子女教育：</text>
-      <input bindblur="deduction" type="digit"  placeholder="每月1000元" placeholder-class="placeholder" />
-    </view>
-    <view class="list-item">
-      <text class="list__title">继续教育：</text>
-      <input bindblur="deduction" type="digit" placeholder="每月400元" placeholder-class="placeholder" />
-    </view>
-    
-    <view class="list-item">
       <text class="list__title">住 / 租房：</text>
-      <input bindblur="deduction" type="digit" placeholder="每月1200元" placeholder-class="placeholder" />
+      <input id="kc_house" bindblur="deduction" type="digit" placeholder="每月1200元" placeholder-class="placeholder" />
     </view>
     <view class="list-item">
       <text class="list__title">赡养老人：</text>
-      <input bindblur="deduction" type="digit" placeholder="60岁以上，1000元" placeholder-class="placeholder" />
+      <input id="kc_parents" bindblur="deduction" type="digit" placeholder="60岁以上，1000元" placeholder-class="placeholder" />
+    </view>
+    <view class="list-item">
+      <text class="list__title">子女教育：</text>
+      <input id="kc_children" bindblur="deduction" type="digit"  placeholder="每月1000元" placeholder-class="placeholder" />
+    </view>
+    <view class="list-item">
+      <text class="list__title">继续教育：</text>
+      <input id="kc_myedu" bindblur="deduction" type="digit" placeholder="每月400元" placeholder-class="placeholder" />
     </view>
     <view class="list-item">
       <text class="list__title">大病医疗：</text>
-      <input bindblur="deduction" type="digit" placeholder="" placeholder-class="placeholder" />
+      <input id="kc_disease" bindblur="deduction" type="digit" placeholder="" placeholder-class="placeholder" />
     </view>
   </view>
 
   
   <view class="section gap10">
     <button class="col-10" type="primary" bindtap="primary"> 计算 </button>
+  </view>
+  <view class="cprigt">
+    ©谷阿沐
   </view>
   <!-- 用户 openid -->
   <!-- <view class="userinfo">
