--- a/calculator/miniprogram/pages/index/index.wxml
+++ b/calculator/miniprogram/pages/index/index.wxml
@@ -7,7 +7,6 @@
         <view class='income'>￥{{zengshou}}</view>
       </view>
       <view class="section">
-        
         <view class="panel-item">
           <text class="panel__title">原纳税额度</text>
           <view>{{payDutyVal}}</view>
@@ -56,12 +55,15 @@
     </view>
     <view class="list-item">
       <text class="list__title">补充公积金：</text>
-      <input bindtap="selectRate" placeholder="填写补充比例，如：0.05" placeholder-class="placeholder"
+      <input bindtap="selectRate" placeholder="选择补充公积金比例" placeholder-class="placeholder"
        value="{{addFundRate}}" disabled 
         />
+        
     </view>
   </view>
-
+  <view class='section'>3
+  <mp-select type="radio" range="{{range}}" value="{{value}}" bindsaveevent="bindchange" bindcancelevent="cancel" wx:if="{{show}}" ></mp-select>
+  </view>
   <view class="section list">
     <text class="section__title">专项扣除：</text>
     <view class="list-item">
